# codeloom

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  team-config.template.yaml
opencode/commands/: codeloom-branch.md  codeloom-check.md  codeloom-export.md  codeloom-index.md  codeloom-pull.md  codeloom-push.md  codeloom-search.md  codeloom-setup.md  codeloom-smart-setup.md  codeloom-status.md
scripts/: ci-build.sh  install.ps1  install.sh
src/: ignore.rs  main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/doc/: glossary.rs  mod.rs
src/embedding/: mod.rs  onnx.rs
src/indexer/: git.rs  mod.rs  smart.rs  tree_sitter.rs
src/indexer/queries/: cpp.rs
src/linking/: mod.rs
src/mcp/: mod.rs
src/query/: call_graph.rs  impact.rs  inheritance.rs  mod.rs  search.rs  semantic.rs
src/storage/: dedup.rs  mod.rs  schema.rs  symbols.rs
